feat: add class footerfont

--- a/css_dict.css
+++ b/css_dict.css
@@ -1,5 +1,10 @@
 .brandtitle{
     color: white;
-    font-family: monospace;
-    font-size: large;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 40px;
+    font-weight: bolder;
+}
+
+.footerfont{
+    color: white
 }
