fix: font-weight

--- a/css_dict.css
+++ b/css_dict.css
@@ -2,9 +2,10 @@
     color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 40px;
-    font-weight: bolder;
+    font-weight: normal;
 }
 
 .footerfont{
     color: white
+
 }
