--- a/css_dict.css
+++ b/css_dict.css
@@ -9,3 +9,10 @@
     color: white
 
 }
+.nav{
+    color: white;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-size: 30px;
+    font-weight:normal;
+    text-decoration: underline;
+}
