--- a/css_dict.css
+++ b/css_dict.css
@@ -11,8 +11,7 @@
 }
 .nav{
     color: white;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
-    font-size: 30px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
     font-weight:normal;
-    text-decoration: underline;
 }
