--- a/css_dict.css
+++ b/css_dict.css
@@ -21,3 +21,9 @@
     font-size: 20px;
     text-align: center;
 }
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
