--- a/css_dict.css
+++ b/css_dict.css
@@ -3,12 +3,14 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 40px;
     font-weight: normal;
-    
+
 }
 
 .footerfont{
     color: white;
     text-align: end;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px
 
 }
 .nav{
@@ -27,4 +29,5 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 25;
   }
