--- a/css_dict.css
+++ b/css_dict.css
@@ -8,9 +8,8 @@
 
 .footerfont{
     color: white;
-    text-align: end;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 20px
+    font-size: 30px
 
 }
 .nav{
@@ -29,5 +28,10 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 25;
+    width: 40;
   }
+
+.toplink{
+    font-size: 20px;
+    text-align: end;
+}
