--- a/css_dict.css
+++ b/css_dict.css
@@ -9,8 +9,8 @@
 .footerfont{
     color: white;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 30px
-
+    font-size: 30px;
+    
 }
 .nav{
     color: white;
