--- a/css_dict.css
+++ b/css_dict.css
@@ -28,7 +28,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 40;
+    width: 35;
   }
 
 .toplink{
@@ -45,4 +45,9 @@ hr{
     border-color: white;
     font-size: 20px;
 
+}
+
+.address{
+    font-size: 20px;
+    text-align: right;
 }
