--- a/css_dict.css
+++ b/css_dict.css
@@ -48,6 +48,8 @@ hr{
 }
 
 .address{
-    font-size: 20px;
-    text-align: right;
+    color: white;
+    font-size: 15px;
+    text-align: end;
+    font-family:Georgia, 'Times New Roman', Times, serif;
 }
