--- a/css_dict.css
+++ b/css_dict.css
@@ -53,3 +53,7 @@ hr{
     text-align: end;
     font-family:Georgia, 'Times New Roman', Times, serif;
 }
+
+.container{
+    background-color:white;
+}
