--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 <html lang="en" dir='ltr'>
     <head>
         <meta charset="utf-8">
-        <title>JR Home Page</title>
+        <title>{{title}} Page</title>
         <!-- Bootstrap CSS, JS, and jQuery -->
         <!-- STEP 1: INSERT THE BOOTSTRAP 4 LINKS HERE -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <h1>Welcome to My Webpage</h1>
+        <h1>Welcome to {{ name }} website</h1>
 
     </body>
 
