--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <html lang="en" dir='ltr'>
     <head>
         <meta charset="utf-8">
-        <title>{{title}} Page</title>
+        <title> JR Page</title>
         <!-- Bootstrap CSS, JS, and jQuery -->
         <!-- STEP 1: INSERT THE BOOTSTRAP 4 LINKS HERE -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -12,7 +12,36 @@
     </head>
 
     <body>
+        <br>
         
+        <!-- SECTION: NAV BAR -->
+        <a name='Home'></a>
+        <nav class="navbar navbar-light bg-dark">
+            <div class="container-fluid">
+                <!--<a class="navbar-brand" href="#Home"><span class=brandtitle>JR</span></a> -->
+                <a class="navbar-brand" href="#"><img src="static/logo.svg" alt="" width="80" height="80" class="d-inline-block align-top"></a>
+                
+                <ul class="nav justify-content-end">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Home"><h1 class=nav>HOME</h1><span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item ">
+                        <a class="nav-link" href="#About"><h1 class=nav>ABOUT ME</h1><span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#Contact"><h1 class=nav>CONTACT</h1><span class="sr-only">(current)</span></a>
+                    </li>
+    
+                </ul>
+
+
+            </div>
+
+        </nav>
+
+        
+        <br>
+
 
     </body>
 
