feat: adding a block

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,10 +38,11 @@
             </div>
 
         </nav>
-
-        
         <br>
 
+        {% block content %}
+
+        {% endblock%}
 
     </body>
 
