--- a/templates/home.html
+++ b/templates/home.html
@@ -1,21 +1,6 @@
-<html lang="en" dir='ltr'>
-    <head>
-        <meta charset="utf-8">
-        <title>{{title}} Page</title>
-        <!-- Bootstrap CSS, JS, and jQuery -->
-        <!-- STEP 1: INSERT THE BOOTSTRAP 4 LINKS HERE -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <link rel="stylesheet" href="css_dict.css">
-        <script src="http://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+{% extends base.html %}
 
-    </head>
+{% block content %}
+<h1> Welcome to Home Page </h1>
 
-    <body>
-        <h1>Welcome to {{ name }} website</h1>
-
-    </body>
-
-
-</html>
-
+{% endblock %}
