--- a/templates/home.html
+++ b/templates/home.html
@@ -2,5 +2,6 @@
 
 {% block content %}
 <h1> Welcome to Home Page </h1>
+<h2> This is where i showcase some of my web portfolio projects </h2>
 
 {% endblock %}
