--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1> Welcome to Home Page </h1>
-<h2> This is where i showcase some of my web portfolio projects </h2>
+<div class='container'>
+    <h1> Welcome to Home Page </h1>
+    <h2> This is where i showcase some of my web portfolio projects </h2>   
+
+</div>
+
+
 
 {% endblock %}
