feat: columns for portfolio layout

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class='container'>
+<div class='container-sm'>
     <h1> Welcome to Home Page </h1>
-    <h2> This is where i showcase some of my web portfolio projects </h2>   
+    <h2> This is where i showcase some of my web portfolio projects </h2>
+</div>
 
+<br>
+
+<div class='container'>
+    <div class='row'>
+        <div class='col'>
+            <h3>Website 1</h3>
+        </div>
+        <div class='col'>
+            <h3>Website 2</h3>
+        </div>
+    </div>
 </div>
 
 
