--- a/templates/home.html
+++ b/templates/home.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <div class='container-sm'>
-    <h1> Welcome to Home Page </h1>
-    <h2> This is where i showcase some of my web portfolio projects </h2>
+    <h1> Welcome to Jay Rajan's Web Portfolio page </h1>
+    <p> Checkout some of the web projects that i have designed using Python-Flask/HTML/CSS/Bootstrap </p>
 </div>
 
 <br>
@@ -11,10 +11,16 @@
 <div class='container'>
     <div class='row'>
         <div class='col'>
-            <h3>Website 1</h3>
+            <h3>Currency Converter - Website</h3>
+            <br>
+            <p> This is a currency converter where you can convert: GBP to USD</p>
+            <button type="button" class="btn btn-primary btn-lg"> Currency Converter </button>
         </div>
         <div class='col'>
-            <h3>Website 2</h3>
+            <h3>Jay Rajan Portfolio shoot</h3>
+            <br>
+            <p> This is a simple website showcasing some professional shoots </p>
+            <button type="button" class="btn btn-primary btn-lg"> Portfolio Shoot </button>
         </div>
     </div>
 </div>
