feat: footer and navigation bar

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,66 +44,20 @@
 
         {% endblock%}
 
+        <br>
+
         <footer>
-
-       
             <nav class="navbar navbar-light bg-dark">
-                <div class="container-float">
-
-                    <span class=footerfont>Contact</span>
+                <div class='container-float'>
+                    <div class="row">
+                        <div class="col-sm">
+                            <a href="https://wa.me/447849928386" target="_blank"><img class="img" src="static/whatsapp.png" alt="Second slide" width='50' heigh='50'></a>
+                            <br>
                 </div>
 
             </nav>
+        </footer>
 
-            
-
-            <nav class="navbar navbar-light bg-dark">
-                <div class="container-float">
-                    <div class="row">
-                        <div class="col-sm">
-                            <hr>
-                            <a href="https://wa.me/447849928386" target="_blank"><img class="img" src="static/whatsapp.png" alt="Second slide"></a>
-                            <br>
-                        </div>
-                        <div class="col-sm">
-                            <p> </p>
-                            <hr>
-                            <a href="mailto:jay.rajan27@gmail.com"><img class="img" src="static/gmail.png" alt="Second slide"></a>
-                            <br>
-
-                        </div>
-
-                        <div class="col-sm">
-                            <p> </p>
-                            <hr>
-                            <a href="https://www.instagram.com/jay.rajan27/" target="_blank"><img class="img" src="static/insta.png" alt="Second slide"></a>
-                            <br>
-
-                        </div>
-
-                        <div class="col-md-auto">
-                            <br>
-                            <span class="address">London, United Kingdom </span>
-                        </div>
-                        
-
-                    </div>
-
-                    <div class="row">
-                        <div class="col-sm">
-                            <span class="address"> ©️ 2021. JTech. All Rights Reserved </span>
-                        </div>
-                        
-                    </div>
-
-
-                    
-                </div>
-            </nav>
-
-
-
-        </footer> 
 
     </body>
 
