feat: adding copyright, del: contact whatsapp logo

--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
                 <div class='container-float'>
                     <div class="row">
                         <div class="col-sm">
-                            <a href="https://wa.me/447849928386" target="_blank"><img class="img" src="static/whatsapp.png" alt="Second slide" width='50' heigh='50'></a>
+                            <span class="address"> ©️ 2021. JTech. All Rights Reserved </span>
                             <br>
                 </div>
                 
