fix: remove breaks

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,13 +44,7 @@
 
         <br>
 
-        <footer>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+        <footer class="footer">
             <nav class="navbar navbar-light bg-dark">
                 <div class='container-float'>
                     <div class="row">
