--- a/css_dict.css
+++ b/css_dict.css
@@ -14,6 +14,13 @@ h3{
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 30px;
 
+.footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+
 }
 .nav{
     color: white;
