--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
 
         <br>
 
-        <footer class="footer">
+        <div class="footer">
             <nav class="navbar navbar-light bg-dark">
                 <div class='container-float'>
                     <div class="row">
@@ -55,7 +55,7 @@
                 
 
             </nav>
-        </footer>
+        </div>
 
 
     </body>
